[package]
name = "bevy_blob_loader"
description = "Bevy plugin for loading assets from JavaScript blob URLs."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[workspace]
resolver = "2"
members = ["example"]

[workspace.package]
version = "0.3.0"
edition = "2024"
repository = "https://github.com/kayhhh/bevy_blob_loader"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
js-sys = "0.3.94"
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.67"

[dependencies]
base64 = "0.22.1"
bevy = { version = "0.19", default-features = false, features = ["bevy_asset"] }
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { version = "0.3.94", features = ["Request", "Window", "Response"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
